[package]
name = "trpl"
version = "0.1.0"
edition = "2021"
default-run = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "1-2"
path = "src/1-2/main.rs"

[[bin]]
name = "1-3"
path = "src/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"
